vps-functions: make sure PATH contains dirs we need
'arpsend' is installed into our @SBINDIR@ (which can be /usr/sbin
or /usr/local/sbin or something else).

'ip' usually lives in /sbin or in some cases /bin. Previously
(in vzctl <= 3.0.24) we called in /sbin/ip, but commit 8894720
changes that.

So, make sure all these dirs are in PATH, so we don't fail miserably,
for example like this:
  $ sudo /usr/sbin/vzifup-post eth1
  /usr/lib64/vzctl/scripts/vps-functions: line 111: ip: command not found
or this:
  $ sudo /usr/sbin/vzifup-post eth1
  /usr/lib64/vzctl/scripts/vps-functions: line 160: arpsend: command not found
  vzifup-post WARNING: arpsend -c 1 -w 1 -U -i 10.30.101.101 -e 10.30.101.101 eth1 FAILED

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -40,6 +40,18 @@ CONF_DIR="@PKGCONFDIR@/conf/"
 ARPSEND_CMD="arpsend -c 1 -w 1"
 IP_CMD="ip"
 
+# For 'ip' and 'arpsend' to work,
+# make sure these dirs are in $PATH
+for d in /sbin /usr/sbin @SBINDIR@; do
+	case ":${PATH}:" in
+		*:"${d}":*)
+			;;
+		*)
+			PATH=${d}:$PATH
+			;;
+	esac
+done
+
 # Prints error message and exits
 # Parameters:
 #   $1 - error message
