bash-completion: for restore, show only suspended CTs
When completing CT IDs and names for vzctl restore, only show
CTs what have a status of suspended. Unfortunately vzlist doesn't have
the ability to filter out CTs by status (except for running/stopped/all),
so we have to use grep/sed trickery.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -26,6 +26,13 @@ _get_ves()
 			@SBINDIR@/vzlist -H -octid 2>/dev/null
 			@SBINDIR@/vzlist -H -oname 2>/dev/null | $rm_empty
 			;;
+		restore)
+			# suspended CTs
+			(@SBINDIR@/vzlist -HS -o status,ctid;
+			 @SBINDIR@/vzlist -HS -o status,name) 2>/dev/null | \
+				grep '^suspended ' | \
+				sed 's/^suspended *//' | $rm_empty
+			;;
 		*)
 			# All CTs
 			@SBINDIR@/vzlist -H -a -octid 2>/dev/null
