--- a/bin/vznetaddbr.in
+++ b/bin/vznetaddbr.in
@@ -31,6 +31,7 @@ for iface in $NETIFLIST; do
 
     echo "Adding interface $host_ifname to bridge $bridge on CT0 for CT$VEID"
     ip link set dev "$host_ifname" up
+    ip addr add 0 dev "$host_ifname"
     echo 1 >"/proc/sys/net/ipv4/conf/$host_ifname/proxy_arp"
     echo 1 >"/proc/sys/net/ipv4/conf/$host_ifname/forwarding"
     brctl addif "$bridge" "$host_ifname"
