etc/init.d/vz-*: fix for previous kludge.
Commit 39bdf8e401 added a kludge to modify default CONFIGFILE
for vswap-enabled kernel (and warn a user about it). The problem
is such warning is printed every time (on a vswap-enabled kernel)
regardless of whether we actually modify vz.conf or not.

Fix it. While at it, make the code more simple/generic.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -220,11 +220,14 @@ modify_vzconf()
 	# For vswap-enabled kernel (like RHEL6 042test or greater),
 	# use vswap config for CT. Don't do it if CONFIGFILE= is modified
 
+	local cfg_old='^CONFIGFILE="basic"$'
+	local cfg_new='CONFIGFILE="vswap-256m"'
 	local kv=$(cat /proc/vz/version | sed 's/\(test\|stab\).*$//')
 	if test $kv -ge 42; then
-		sed -i 's/^CONFIGFILE="basic"$/CONFIGFILE=vswap-256m/' $VZCONF
-		ewarn "CONFIGFILE is set to vswap-256m in $VZCONF"
-
+		if grep -q $cfg_old $VZCONF; then
+			sed -i "s/${cfg_old}/${cfg_new}/" $VZCONF
+			ewarn "Set $cfg_new in $VZCONF"
+		fi
 	fi
 }
 
