etc/init.d/vz*: more proper kernel check in modify_vzconf()
For now, the only VSwap-capable kernel is 042{test,stab}.
Currently all the kernels that do not have stab or test in their name
(ie in /proc/vz/version) are definitely not VSwap-capable. If they
ever will be we will need to modify this check.

Add the check for 'test|stab' to avoid the following error while
starting vz initscript:

  /etc/init.d/vz: line 163: test: dzhanibekov: integer expression expected

Reported-by: Stanislav Kinsbursky <skinsbursky@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit 75678d30df68959474ce303db9e63c29b641b6f0)

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -220,6 +220,8 @@ modify_vzconf()
 	# For vswap-enabled kernel (like RHEL6 042test or greater),
 	# use vswap config for CT. Don't do it if CONFIGFILE= is modified
 
+	egrep -q 'test|stab' /proc/vz/version 2>/dev/null || return 0
+
 	local cfg_old='^CONFIGFILE="basic"$'
 	local cfg_new='CONFIGFILE="vswap-256m"'
 	local kv=$(cat /proc/vz/version | sed 's/\(test\|stab\).*$//')
