Fix networking for Debian-3.1
After a few changes in dists/scripts (specifically, 9612a012)
we broke the compatibility with Debian 3.1. My guess was nobody
will notice since people have moved on to newer versions, but
apparently I was wrong.

Let's fix it in a very simple way -- use older version of
add_ip script for Debian-3.x, generated with

  git show 25c14e96:debian-add_ip.sh

Note that del_ip script is about the same so we use the same one
for all Debian versions

http://bugzilla.openvz.org/1802

(cherry picked from commit e08d12dce65bc3b9f78ce6a7b2aa4323feed831c)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -35,7 +35,8 @@ ALT_2x_VER    = 2.4
 ALT_VER       = 3.0 4.0
 ARCH_VER      = 0.7 0.8
 CENTOS_VER    = 3 4
-DEBIAN_VER    = 3.0 3.1 4.0
+DEBIAN_VER    = 4.0
+DEBIAN_3x_VER = 3.0 3.1
 FC_VER        = 1 2 3 4 5 6 7
 FEDORA_VER    = 7 8 9 10 11 12 13
 REDHAT_7x_VER = 7.0 7.1 7.2 7.3
@@ -68,6 +69,10 @@ centos:
 	done
 
 debian:
+	for ver in $(DEBIAN_3x_VER); do \
+		$(INSTALL_DATA) $(srcdir)/debian-3.conf \
+		    $(DESTDIR)$(distconfdir)/debian-$$ver.conf; \
+	done
 	for ver in $(DEBIAN_VER); do \
 		$(INSTALL_DATA) $(srcdir)/debian.conf \
 		    $(DESTDIR)$(distconfdir)/debian-$$ver.conf; \
