etc/init.d/vz-gentoo: load vzethdev kernel module
Commit 2b087e8aa back in August 2006 added loading vzethdev
kernel module to etc/init.d/vz script. Next, commit 6a1aaa413a
from September 2006 introduces Gentoo-specific initscript.

Somehow we never included loading vzethdev into vz-gentoo script.
Fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -24,7 +24,7 @@ check_config() {
 		: ${PRELOAD_MODULES:="af_packet"}
 		: ${MODULES:="vzmon vzdquota vzdev"}
 		: ${MIGRATE_MODULES:="vzcpt vzrst"}
-		: ${NET_MODULES="vznetdev vznet"}
+		: ${NET_MODULES="vznetdev vznet vzethdev"}
 
 		# check if you should load vzwdog module
 		[ "${VZWDOG}" = "yes" ] && MODULES="${MODULES} vzwdog"
