etc/init.d/vz*: use separate IPTABLES_MODULES variable
This commit tries to untangle the mess caused by the fact that the IPTABLES
parameter in global vz.conf(5) configuration file was used for two purposes:

1. Set the list of kernel modules to load before loading OpenVZ modules.
2. Set the default IPTABLES/--iptables values for containers.

Now, not all iptables modules are recognized by vzctl (and have a dedicated
bit in iptables_mask passed on to the kernel). So in case you need to use
functionality (1) but the module is not recognized by vzctl, you get the
following warning (totally harmless, but pretty annoying):

	Warning: Unknown iptable module: ipt_iprange, skipped

We solve this by having two separate variables in vz.conf:

	IPTABLES: default for IPTABLES/--iptables value for CTs

	IPTABLES_MODULES: list of kernel modules to preload

Now, to retain backward compatibility, we use IPTABLES for list
of modules to load if IPTABLES_MODULES is empty.

While at it, also

 - document it in vz.conf(5) man page
 - add the module loading functionality to vz-gentoo initscript

http://bugzilla.openvz.org/1814

Reported-by: Curtis <curtis@isparks.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -21,6 +21,8 @@ check_config() {
 	: ${VZCONF:=@PKGCONFDIR@/vz.conf}
 
 	if [ "${MODULES_DISABLED}" != "yes" ]; then
+		: ${IPTABLES_MODULES:="${IPTABLES}"}
+		IPTABLES_MODULES="ip_tables ${IPTABLES_MODULES} xt_tcpudp"
 		: ${PRELOAD_MODULES:="af_packet"}
 		: ${MODULES:="vzmon vzdquota vzdev"}
 		: ${MIGRATE_MODULES:="vzcpt vzrst"}
@@ -240,6 +242,10 @@ start() {
 	local mod rc
 
 	ebegin "Loading OpenVZ modules"
+	for mod in ${IPTABLES_MODULES}; do
+		/sbin/modprobe ${mod} >/dev/null 2>&1
+	done
+
 	for mod in ${PRELOAD_MODULES}; do
 		/sbin/modprobe -r ${mod} >/dev/null 2>&1
 		/sbin/modprobe ${mod} >/dev/null 2>&1
