--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -39,8 +39,10 @@ DEF_OSTEMPLATE="centos-5"
 ## Load vzwdog module
 VZWDOG="no"
 
-## IPv4 iptables kernel modules
+## IPv4 iptables kernel modules to be enabled in CTs by default
 IPTABLES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
+## IPv4 iptables kernel modules to be loaded by init.d/vz script
+IPTABLES_MODULES="$IPTABLES"
 
 ## Enable IPv6
 IPV6="yes"
