vzubc: distinguish between two importance levels
function important() (which is currently only used for quiet mode)
now returns
	0 in "not important" case,
	1 in "maybe important" case, and
	2 in "important" case.

This will be used to colorize the output.

While at it, fix passing failcnt to the function.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -193,11 +193,13 @@ function dp(p, d) {
 
 function important(id, held, maxheld, barrier, limit, failcnt) {
 	if (failcnt > 0)
-		return 1;
+		return 2;
 	if (barrier == 0)
 		barrier = limit;
 	if ((barrier == 9223372036854775807) || (barrier == 2147483647))
 		return 0;
+	if (held > barrier)
+		return 2;
 	if (held > barrier * qheld)
 		return 1;
 	if (maxheld > barrier * qmaxheld)
@@ -248,8 +250,9 @@ bcid, cumul ? "+" : " ")
 	failcnt=$6
 }
 ((id!="")  && (bcid!="")) {
+	imp=important(id, held, maxheld, barrier, limit, failcnt)
 	if (quiet)
-		if (!important(id, held, maxheld, barrier, limit)) {
+		if (!imp) {
 			id=""
 			next
 		}
