vzubc: lower chances to lose data
Option -rc can be dangerous if used together with -rd (think of
"vzubc -rd $HOME -rc")!

Do not try to delete the files recursively and add the "ubc." prefix to
the files we create to lower the chances of removing something we didn't
create.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -102,7 +102,7 @@ while test $# -gt 0; do
 		;;
 	-rc)
 		relative=1
-		rm -fr $STOREDIR/
+		rm -f $STOREDIR/ubc.*
 		;;
 	-rd)
 		chk_zeroarg $1 $2
@@ -163,8 +163,8 @@ if ! test -z "$relative"; then
 		mkdir $STOREDIR || exit 1
 	fi
 	# Check we can write to it
-	touch $STOREDIR/test || exit 1
-	rm -f $STOREDIR/test || exit 1
+	touch $STOREDIR/ubc.test || exit 1
+	rm -f $STOREDIR/ubc.test || exit 1
 fi
 
 # Re-exec ourselves under watch
@@ -270,7 +270,7 @@ c_n, bcid, rel ? "+" : " ")
 ((id!="")  && (bcid!="")) {
 	newfc=failcnt
 	if ( (rel) && (failcnt > 0) ) {
-		storefile=storedir "/" bcid "." id
+		storefile=storedir "/ubc." bcid "." id
 		getline oldfc < storefile
 		if (oldfc > 0)
 			failcnt=failcnt-oldfc
