--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -264,10 +264,10 @@ function important(id, held, maxheld, barrier, limit, failcnt) {
 	}
 	header=sprintf( c_h \
 "----------------------------------------------------------------%s\n" \
-"CT %-10s| HELD %s Bar%% Lim%%| MAXH Bar%% Lim%%| BAR | LIM |%cFAIL\n" \
-"-------------+--%s--------------+---------------+-----+-----+-----" \
-c_n, inc ? "------" : "",
-bcid, inc ? " +/-  " : "", rel ? "+" : " ", inc ? "------" : "")
+"CT %-10s| HELD%s Bar%% Lim%%| MAXH Bar%% Lim%%| BAR | LIM |%cFAIL\n" \
+"-------------+-%s--------------+---------------+-----+-----+------" \
+c_n, inc ? "-------" : "",
+bcid, inc ? "  +/-  " : "", rel ? "+" : " ", inc ? "-------" : "")
 	id=$2
 	held=$3
 	maxheld=$4
@@ -348,6 +348,6 @@ bcid, inc ? " +/-  " : "", rel ? "+" : " ", inc ? "------" : "")
 }
 END {
 	if (printed)
-		printf "-----------------------------------------------------------------%s\n", inc ? "------" : ""
+		printf "----------------------------------------------------------------%s\n", inc ? "-------" : ""
 }
 '
