vzubc: do not multiply failcnt for *pages resources
vzubc shows *pages resources in bytes (by multiplying those to page size,
i.e. 4096). Surely, while held, maxheld, barrier and limit should all be
multiplied, failcnt should not!

Fix it by not providing the name of the beancounter to hr().

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -335,7 +335,7 @@ bcid, inc ? "  +/-  " : "", rel ? "+" : " ", inc ? "-------" : "")
 		id,
 		hr(id, held), d_held, dp(held, barrier), dp(held, limit),
 		hr(id, maxheld), dp(maxheld, barrier), dp(maxheld, limit),
-		hr(id, barrier), hr(id, limit), hr(id, failcnt)
+		hr(id, barrier), hr(id, limit), hr("", failcnt)
 	if ( (rel) && (newfc > 0) ) {
 		print newfc > f_file
 		close(f_file)
