etc/dists: rm centos.conf, make it an alias of redhat.conf
They were the same, so let's reuse redhat.conf to make things simple.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -51,7 +51,7 @@ arch:
 	$(INSTALL_DATA) $(srcdir)/arch.conf $(DESTDIR)$(distconfdir)/arch.conf
 
 centos:
-	$(INSTALL_DATA) $(srcdir)/centos.conf \
+	$(INSTALL_DATA) $(srcdir)/redhat.conf \
 		$(DESTDIR)$(distconfdir)/centos.conf
 
 debian:
@@ -89,7 +89,7 @@ redhat:
 	done
 
 rhel:
-	$(INSTALL_DATA) $(srcdir)/centos.conf \
+	$(INSTALL_DATA) $(srcdir)/redhat.conf \
 		$(DESTDIR)$(distconfdir)/rhel.conf
 
 slack:
