etc/dists: add scientific.conf
It's the same as RedHat, RHEL, and CentOS, so make it an alias
to redhat.conf

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/dists/Makefile.am
+++ b/etc/dists/Makefile.am
@@ -92,6 +92,10 @@ rhel:
 	$(INSTALL_DATA) $(srcdir)/redhat.conf \
 		$(DESTDIR)$(distconfdir)/rhel.conf
 
+scientific:
+	$(INSTALL_DATA) $(srcdir)/redhat.conf \
+		$(DESTDIR)$(distconfdir)/scientific.conf
+
 slack:
 	$(INSTALL_DATA) $(srcdir)/slackware.conf \
 		$(DESTDIR)$(distconfdir)/slackware.conf
@@ -130,6 +134,7 @@ install-data-hook: altlinux \
                    owl \
                    redhat \
                    rhel \
+                   scientific \
                    slack \
                    suse \
                    ubuntu
