vzctl create --ostemplate: add support for .bz2 and .xz
Support for compressors other than gzip was not added mostly
because there was no way to find out the uncompressed file
size.

Now good news: recent versions of xz (as in Fedora 14) implement
-l --robot flags which can be used to get the uncompressed size.
For bzip2 and older xz we can estimate uncompressed file sizes by
multiplying compressed size to some factor. I did a quick test
(see bug report below) and ended up with 3 and 4.7 multipliers
for bzip2 -9 and xz -9, respectively.

Because of the above, using bzip2 for templates IS NOT RECOMMENDED.

Error message ("file not found") has changed appropriately
since we are now looking for a few files. If --verbose is specified,
we also print full names of all the files we try:

 # vzctl --verbose create 1234567 --ostemplate aka
 Creating container private area (aka)
 Looking for /vz/template/cache/aka.tar
 Looking for /vz/template/cache/aka.tar.gz
 Looking for /vz/template/cache/aka.tar.bz2
 Looking for /vz/template/cache/aka.tar.xz
 Cached OS template /vz/template/cache/aka.tar[.gz|.bz2|.xz] not found
 Creation of container private area failed
 # echo $?
 91

Loosely based on patch from Víctor Román Archidona.

http://bugzilla.openvz.org/1670

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -41,13 +41,37 @@ create_prvt()
 	TMP="$(df -P "$VE_PRVT")" ||
 		vzerror "Failed to calculate available disk space on $VE_PRVT" ${VZ_FS_NEW_VE_PRVT}
 	AVAIL="$(echo "$TMP" | awk 'END{print $4}')"
-	if [ "$HEADER" = ' 1f 8b' ]; then
-		NEEDED="$(gzip -l "$PRIVATE_TEMPLATE" | awk 'END{print int($2/1024)}')"
-		OPT=-z
-	else
-		NEEDED="$(find "$PRIVATE_TEMPLATE" -maxdepth 0 -path "$PRIVATE_TEMPLATE" -printf %k)"
-		OPT=
+
+	case $HEADER in
+		' 1f 8b') # gzip
+			OPT=-z
+			NEEDED="$(gzip -l "$PRIVATE_TEMPLATE" | \
+				awk 'END{print int($2/1024)}')"
+			;;
+		' 42 5a') # bzip2
+			OPT=-j
+			# No way to get uncompressed size, so guess
+			NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | \
+				awk 'END{print int($5*3)')"
+			;;
+		' fd 37') # xz
+			OPT=-J
+			NEEDED="$(xz -l --robot "$PRIVATE_TEMPLATE" \
+				2>/dev/null | \
+				awk 'END{print int($5/1024)}')"
+			# Not all xz versions implement -l, so guess
+			if [ "$NEEDED" = "0" ] ; then
+				NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" \
+					awk 'END{print int($5*4.7)')"
+			fi
+
+			;;
+	esac
+	# For the uncompressed case
+	if [ -z "$NEEDED" ] ; then
+		NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | awk 'END{print $5}')"
 	fi
+
 	[ "$AVAIL" -ge "$NEEDED" ] ||
 		vzerror "Insufficient disk space in $VE_PRVT; available: $AVAIL, needed: $NEEDED" ${VZ_FS_NO_DISK_SPACE}
 	chmod 700 "$VE_PRVT"
