vps-create: fix a few typos here and there
This is a fix to commit 06cc8e045. Testing revealed a number of bad typos...

1) Missing closing "}" in awk statements (3 places)

2) Add missing pipe character

3) (cosmetic) Add a space after "END" for better readability

http://bugzilla.openvz.org/1670

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -46,30 +46,30 @@ create_prvt()
 		' 1f 8b') # gzip
 			OPT=-z
 			NEEDED="$(gzip -l "$PRIVATE_TEMPLATE" | \
-				awk 'END{print int($2/1024)}')"
+				awk 'END {print int($2/1024)}')"
 			;;
 		' 42 5a') # bzip2
 			OPT=-j
 			# No way to get uncompressed size, so guess
 			NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | \
-				awk 'END{print int($5*3)')"
+				awk 'END {print int($5*3)}')"
 			;;
 		' fd 37') # xz
 			OPT=-J
 			NEEDED="$(xz -l --robot "$PRIVATE_TEMPLATE" \
 				2>/dev/null | \
-				awk 'END{print int($5/1024)}')"
+				awk 'END {print int($5/1024)}')"
 			# Not all xz versions implement -l, so guess
 			if [ "$NEEDED" = "0" ] ; then
-				NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" \
-					awk 'END{print int($5*4.7)')"
+				NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | \
+					awk 'END {print int($5*4.7)}')"
 			fi
 
 			;;
 	esac
 	# For the uncompressed case
 	if [ -z "$NEEDED" ] ; then
-		NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | awk 'END{print $5}')"
+		NEEDED="$(ls -lk "$PRIVATE_TEMPLATE" | awk 'END {print $5}')"
 	fi
 
 	[ "$AVAIL" -ge "$NEEDED" ] ||
